# Zomato_AI

./: .env.example  .gitignore  README.md  phase-wise-architecture.md  pyproject.toml  requirements.txt  streamlit_app.py  test_groq.py  vercel.json
data/processed/: manifest.json
docs/: phase-wise-architecture.md  phase2-filtering.md
docs/data/: README.md
frontend/: app.js  index.html  style.css
frontend-next/: .env.local.example  README.md  package-lock.json  package.json  tailwind.config.ts
frontend-next/src/app/: globals.css  layout.tsx  page.tsx
frontend-next/src/components/: Header.tsx  HeroSearch.tsx  PersonalizedPicks.tsx  QuickTags.tsx  RecommendationCard.tsx
frontend-next/src/lib/: api.ts  types.ts  utils.ts
scripts/: start-next-frontend.ps1
src/restaurant_rec/: __init__.py  __main__.py  cli.py  config.py
src/restaurant_rec/phase1/: __init__.py  canonical.py  ingest.py  store.py  transform.py
src/restaurant_rec/phase2/: __init__.py  bundle.py  filter_engine.py  preferences.py
src/restaurant_rec/phase3/: __init__.py  groq_client.py  models.py  parsing.py  prompts.py  recommend.py  settings.py
src/restaurant_rec/phase4/: __init__.py  api.py  schemas.py  service.py
tests/: test_filter.py  test_ingest_integration.py  test_llm_connection.py  test_phase3_parsing.py  test_phase3_recommend.py  test_phase4_api.py  test_store_query.py  test_transform.py
