[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "restaurant-recommendation"
version = "0.1.0"
description = "AI-powered restaurant recommendation — Phases 1–3 (ingest, filter, Groq LLM)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=2.16.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "pydantic>=2.0.0",
    "typer>=0.12.0",
    "openai>=1.40.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "streamlit>=1.20.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
restaurant-ingest = "restaurant_rec.cli:main"
restaurant-api = "restaurant_rec.phase4.api:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m \"not integration\""
markers = [
    "integration: downloads dataset from Hugging Face (network)",
    "live_llm: calls Groq API (requires GROQ_API_KEY in .env)",
]
